2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Remove obsolete files.

	* lib/host-host-ptl/include/svp_os.h,
	* lib/host-host-seqc/include/svp_os.h,
	* lib/mtalpha-sim/include/svp_asmdiv.h,
	* lib/mtalpha-sim/include/svp_os.h: Remove.

	* lib/seqc.mk,
	* lib/ptl.mk,
	* lib/mtalpha.mk: Update accordingly.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance `cce'.

	* tools/bin/cce.in: Propagate more information to programs: efine
	`__slc_dialect_XXX__', `__slc_variant_XXX__', `__slc_arch_XXX__'
	and `__slc_os_XXX__' according to parameters. Optimize more when compiling
	for host. Avoid linking in `libslc' if `-nostartfiles' is specified.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Appease compiler when using `spr'.

	* tools/lib/slc/lower/split.py (SplitCreates.visit_lowcreate):
	Ensure label for first alternative is always used.

	* tools/lib/slc/lower/lowercreate.py (AutoResolve): New visitor to
	ensure that the resolved label is always used.
	* tools/lib/slc/front/chains.py: Use it.

	* tools/lib/slc/lower/seq.py: Indicate that `__slI' is maybe unused.

	* tools/lib/slc/mtalpha/visitors.py: Ensure that the end label is
	always used.

	* tools/lib/slc/lower/split.py (SplitCreates): Simplify by reusing
	`ScopedVisitor'.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor MT-Alpha optimizations.

	* tools/bin/cce.in: Option `-mcpu' actually overrides `-mfix',
	etc. In order to use all ISA extensions, use `-mcpu=21264a'
	instead.

	* lib/include/cstrings.h: Declare `ffs'.
	* lib/src/ffs.c: New.
	* lib/mtalpha.mk: Tell `malloc' to use `ffs'. Compile `ffs.c'.

2010-06-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add missing module initializers in slc library.

	* tools/lib/slc/input/__init__.py,
	* tools/lib/slc/lower/__init__.py: New.

2010-06-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug with `slr -n'.

	* lib/src/mtinit.c: Dereference function pointer in SEP call. Turn
	`sys_set_main_pid' into a plain function.
